--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sequelize": "^6.32.0",
+    "sequelize-fixtures": "^1.2.0",
     "sqlite3": "^5.1.6"
   }
 }
